module8/part2/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - ngdemo.qikqiak.com
      secretName: qikqiak-tls
  rules:
    - host: ngdemo.qikqiak.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: my-nginx
                port:
                  number: 80
